<resources>
    <string name="app_name">TestProject</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_contact">Contact</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="text_not_member">Don\'t have an account yet? Create one here</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="text_already_member">Already registered! Login Me.</string>
    <string name="action_sign_up">Register</string>


    <string-array name="userType">
        <item>Student</item>
        <item>Teacher</item>
        <item>Department</item>
        <item>Admin</item>
    </string-array>

    <string-array name="lecTime">
        <item>7.30 - 8.45</item>
        <item>8.45 - 9.30</item>
        <item>9.30 - 10.45</item>
        <item>10.45 - 11.30</item>
        <item>11.30 - 12.45</item>
        <item>12.45 - 01.30</item>
    </string-array>

    <string name="default_spinner_lecTime_selection">7.30 - 8.45</string>
    <string name="default_spinner_usertype_selection">Student</string>

    <string name="title_activity_student">Student</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="action_settings">Settings</string>
</resources>
