<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_form_scrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_red_400"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.LinearLayoutCompat
        android:id="@+id/email_login_form_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/signup_logo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:fontFamily="cursive"
            android:gravity="center_vertical"
            android:text="Join us today."
            android:textAlignment="center"
            android:textColor="@color/md_white_1000"
            android:textSize="50sp"
            android:textStyle="bold" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_perm_identity_white_24dp"
                android:hint="@string/prompt_name"
                android:inputType="textPersonName"
                android:maxLength="15"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/md_grey_50" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_mail_outline_white_24dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/md_grey_50" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_contacts_white_24dp"
                android:hint="@string/prompt_contact"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/md_grey_50" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPasswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLength="6"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/md_grey_50" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutConfirmPasswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/confirm_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_lock_outline_white_24dp"
                android:hint="@string/prompt_confirm_password"
                android:inputType="textPassword"
                android:maxLength="6"
                android:maxLines="1"
                android:singleLine="true"
                android:textColorHint="@color/md_grey_50" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/registerTypeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:orientation="horizontal"
            android:padding="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:text="Register as :"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/md_grey_50" />

            <Spinner
                android:id="@+id/spinner_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_signup"
            style="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/md_red_700"
            android:text="@string/action_sign_up"
            android:textColor="@color/md_white_1000"
            android:textStyle="bold" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/textViewLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/text_already_member"
            android:textColor="@color/md_white_1000"
            android:textSize="16sp" />

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v4.widget.NestedScrollView>
